# po

./: .gitignore  CMakeLists.txt  README.md  claude_prompt.md
cli/: CMakeLists.txt  main.cpp
docs/: api_reference.md  user_guide.md
examples/: example_bl.py  example_from_json.py  example_from_returns.py  example_mvo.py
examples/terminal/: .gitignore  README.md  _common.sh
examples/terminal/data/: assets.csv  assets.json  covariance.csv  params_bl.toml  params_mvo.toml  params_mvo_groups.toml  params_mvo_long_short.toml  params_mvo_tracking.toml  params_mvo_turnover.toml  returns_daily.csv
examples/terminal/scripts/: 01_mvo_basic.md  01_mvo_basic.sh  02_mvo_frontier.md  02_mvo_frontier.sh  03_bl_basic.md  03_bl_basic.sh  04_bl_frontier.md  04_bl_frontier.sh  05_min_variance.md  05_min_variance.sh  06_max_sharpe.md  06_max_sharpe.sh  07_target_vol.md  07_target_vol.sh  08_target_return.md  08_target_return.sh  09_report.md  09_report.sh  10_returns_shrinkage.md  10_returns_shrinkage.sh  11_csv_inputs.md  11_csv_inputs.sh  12_group_constraints.md  12_group_constraints.sh  13_turnover_penalty.md  13_turnover_penalty.sh  14_tracking_error.md  14_tracking_error.sh  15_long_short.md  15_long_short.sh  16_output_formats.md  16_output_formats.sh  run_all.sh
include/portopt/: black_litterman.hpp  estimation.hpp  factor_model.hpp  fx.hpp  logging.hpp  mvo.hpp  optimizer.hpp  portfolios.hpp  portopt.hpp  qp_solver.hpp  types.hpp
include/portopt/io/: reader.hpp  writer.hpp
notebooks/: diagnostic_template.ipynb  generate_report.py
python/: CMakeLists.txt  bindings.cpp  pyproject.toml  requirements.txt
python/portopt/: __init__.py  analytics.py  attribution.py  backtest.py  helpers.py  mcp_server.py  schemas.py
python/tests/: test_mcp_surface.py
scripts/: bootstrap.sh
src/: CMakeLists.txt  black_litterman.cpp  estimation.cpp  factor_model.cpp  fx.cpp  logging.cpp  mvo.cpp  portfolios.cpp  qp_solver.cpp
src/io/: reader.cpp  writer.cpp
tests/: CMakeLists.txt  test_black_litterman.cpp  test_estimation.cpp  test_factor_model.cpp  test_fx.cpp  test_integration.cpp  test_io.cpp  test_main.cpp  test_mvo.cpp  test_mvo_extensions.cpp  test_portfolios.cpp  test_qp_solver.cpp
tests/data/: assets.csv  assets.json  params.json  params.toml
