[project]
name = "portopt"
version = "1.1.0"
description = "Portfolio optimisation library (MVO + Black-Litterman) — Python bindings"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "portopt contributors" }]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
    "pandas>=2.0",
]
notebook = [
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]
all = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
]

[project.urls]
Documentation = "https://github.com/example/portopt/blob/master/README.md"

# NOTE: The native C++ extension is built via the top-level CMakeLists.txt.
# This pyproject.toml documents the Python-side packaging only; install the
# generated `_portopt` module by adding `build/python` to PYTHONPATH after
# `cmake --build build`.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["portopt"]
package-dir = { portopt = "portopt" }
