[project]
name = "portopt"
version = "1.1.0"
description = "Portfolio optimisation library (MVO + Black-Litterman) — Python bindings"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "portopt contributors" }]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
    "pandas>=2.0",
]
notebook = [
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]
mcp = [
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
]
all = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Documentation = "https://github.com/example/portopt/blob/master/README.md"

# The native C++ extension (_portopt.*.so / .pyd) is built by the top-level
# CMakeLists.txt and staged into python/portopt/ automatically as a post-build
# step. The recommended workflow is:
#
#     cmake -B build -DCMAKE_BUILD_TYPE=Release
#     cmake --build build --target python-venv --parallel
#
# which creates .venv/ at the repo root and `pip install -e .[all]` into it.
# To install manually into an existing venv after `cmake --build build`:
#
#     pip install -e ./python[all]
#
# Both paths rely on _portopt.*.so being present in python/portopt/ — that
# file is gitignored and produced by the CMake build.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["portopt"]
package-dir = { portopt = "portopt" }

[tool.setuptools.package-data]
portopt = ["_portopt*.so", "_portopt*.pyd"]
